# persistent-rnn

./: .gitignore  output.txt  tile_selection  ubuntu-64-environment.sh
benchmark/: CMakeLists.txt  benchmark-persistent-kernels.cpp  results  test_cudnn_functions.cpp
config/: persistent-rnn.config
include/prnn/detail/matrix/: cudnn_library.h
include/prnn/detail/parallel/: concurrent_collectives.inl
include/prnn/detail/rnn/: recurrent_ops_config.h  recurrent_ops_kernels.h
include/prnn/detail/types/: float16.h
python_scripts/: rnn_benchmark.py
site_scons/: site_init.py
site_scons/site_tools/: nvcc.py
src/detail/matrix/: cudnn_descriptors.cpp  cudnn_library.cpp
src/detail/parallel/: cuda.cpp  cuda_runtime_library.cpp  memory.cpp  synchronization.cpp
src/detail/rnn/: cudnn_ops.cpp  recurrent_ops.cu  recurrent_ops_handle.cpp
test/: CMakeLists.txt  gradient_check.cpp
